--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.4.4",
     "react": "^18.2.0",
+    "react-d3-radar": "^1.0.0-rc6",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.0",
     "react-scripts": "5.0.1",
+    "topojson": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
